feet: add foto and match new information

--- a/index.html
+++ b/index.html
@@ -6,323 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Охотников Святослав</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        :root {
-            --primary-color: #2c3e50;
-            --secondary-color: #1abc9c;
-            --accent-color: #3498db;
-            --light-color: #ecf0f1;
-            --dark-color: #2c3e50;
-            --text-color: #333;
-            --text-light: #777;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            --transition: all 0.3s ease;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: #f9f9f9;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 15px;
-        }
-
-        /* Хэдер */
-        #header {
-            background-color: var(--primary-color);
-            color: white;
-            padding: 1.5rem;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-            box-shadow: var(--shadow);
-        }
-
-        /* Навигация */
-        #menu {
-            background-color: var(--primary-color);
-            padding: 0.5rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: var(--shadow);
-        }
-
-        #menu ul {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            flex-wrap: wrap;
-        }
-
-        #menu li {
-            margin: 0.5rem;
-        }
-
-        #menu a {
-            color: white;
-            text-decoration: none;
-            padding: 0.7rem 1.2rem;
-            border-radius: 4px;
-            transition: var(--transition);
-            display: block;
-        }
-
-        #menu a:hover,
-        #menu a.active {
-            background-color: var(--secondary-color);
-            transform: translateY(-2px);
-        }
-
-        /* Основной контент */
-        #content {
-            padding: 2rem 0;
-        }
-
-        .profile-header {
-            background: white;
-            border-radius: 10px;
-            padding: 2rem;
-            text-align: center;
-            margin-bottom: 2rem;
-            box-shadow: var(--shadow);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 5px solid var(--secondary-color);
-            margin-bottom: 1.5rem;
-        }
-
-        .profile-name {
-            color: var(--primary-color);
-            margin-bottom: 0.5rem;
-            font-size: 2.2rem;
-        }
-
-        .profile-group {
-            color: var(--secondary-color);
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-            font-weight: 500;
-        }
-
-        .profile-header p {
-            color: var(--text-light);
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .tg-link {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background-color: var(--accent-color);
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: var(--transition);
-        }
-
-        .tg-link:hover {
-            background-color: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .section-title {
-            text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 2rem;
-            font-size: 1.8rem;
-            position: relative;
-            padding-bottom: 0.5rem;
-        }
-
-        .section-title::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px;
-            height: 3px;
-            background-color: var(--secondary-color);
-        }
-
-        .skills-section {
-            background: white;
-            border-radius: 10px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: var(--shadow);
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-        }
-
-        .skill-item {
-            background: var(--light-color);
-            padding: 1.5rem;
-            border-radius: 8px;
-            text-align: center;
-            transition: var(--transition);
-            border-left: 4px solid var(--secondary-color);
-        }
-
-        .skill-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-        }
-
-        .skill-item i {
-            font-size: 2.5rem;
-            color: var(--secondary-color);
-            margin-bottom: 1rem;
-        }
-
-        .experience-section {
-            background: white;
-            border-radius: 10px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: var(--shadow);
-        }
-
-        .experience-item {
-            margin-bottom: 2rem;
-            padding-bottom: 1.5rem;
-            border-bottom: 1px solid #eee;
-            position: relative;
-            padding-left: 70px;
-        }
-
-        .experience-item:last-child {
-            margin-bottom: 0;
-            padding-bottom: 0;
-            border-bottom: none;
-        }
-
-        .experience-icon {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 50px;
-            height: 50px;
-            background: var(--secondary-color);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.5rem;
-        }
-
-        .experience-title {
-            color: var(--primary-color);
-            font-size: 1.3rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .experience-item p {
-            color: var(--text-light);
-        }
-
-        /* Футер */
-        #footer {
-            background-color: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 2rem;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .footer-content {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .cta-button {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.8rem 2rem;
-            background-color: var(--secondary-color);
-            color: white;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            transition: var(--transition);
-            border: none;
-            cursor: pointer;
-            font-size: 1.1rem;
-        }
-
-        .cta-button:hover {
-            background-color: #16a085;
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Адаптивность */
-        @media (max-width: 768px) {
-            .profile-name {
-                font-size: 1.8rem;
-            }
-
-            .skills-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .experience-item {
-                padding-left: 60px;
-            }
-
-            #menu ul {
-                flex-direction: column;
-                align-items: center;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .profile-img {
-                width: 150px;
-                height: 150px;
-            }
-
-            .experience-item {
-                padding-left: 0;
-                padding-top: 60px;
-            }
-
-            .experience-icon {
-                top: 0;
-                left: 50%;
-                transform: translateX(-50%);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style/index_style.css">
 </head>
 
 <body>
@@ -344,7 +28,8 @@
         <!-- Основной контент -->
         <div id="content">
             <div class="profile-header">
-                <img src="images/photo.png" alt="Фото автора" class="profile-img">
+                <img src="../images/photo.png" alt="Фото автора" class="profile-img">
+                
                 <h1 class="profile-name">Охотников Святослав Алексеевич</h1>
                 <p class="profile-group">ЭФБО-18-24</p>
                 <p>Начинающий fullstack-разработчик с фокусом на backend-разработку на C# и опыт работы с PostgreSQL</p>
@@ -418,6 +103,7 @@
                 <p>Я открыт для предложений о работе и готов внести вклад в интересные проекты</p>
                 <button class="cta-button">Связаться со мной</button>
                 <p>© 2023 Охотников Святослав. Все права защищены.</p>
+                <img src="/images/моя печать.png" width = "200"/>
             </div>
         </div>
     </div>
