--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты - Наш сайт</title>
+    <title>Контакты - Охотников Святослав</title>
     <link rel="stylesheet" href="../style/style.css">   
 </head>
 <body>
@@ -19,6 +19,7 @@
             <li><a href="../index.html">Главная</a></li>
             <li><a href="news.html">Новости</a></li>
             <li><a href="goods.html">Товары</a></li>
+            <li><a href="practices.html">Практики</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </nav>
