--- a/pages/goods.html
+++ b/pages/goods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товары - Наш сайт</title>
+    <title>Товары - Охотников Святослав</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
             <li><a href="../index.html">Главная</a></li>
             <li><a href="news.html">Новости</a></li>
             <li><a href="goods.html">Товары</a></li>
+            <li><a href="practices.html">Практики</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </nav>
@@ -55,7 +56,7 @@
 
             <!-- Товар 4 -->
             <div class="product-card">
-                <div class="product-image">Даниил Паламарчук</div>
+                <img src="../images/images2.png" class="profile-img">
                 <div class="product-info">
                     <h3 class="product-title">Даниил Паламарчук</h3>
                     <div class="product-price">12 000 ₽</div>
