--- a/pages/news.html
+++ b/pages/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости - Наш сайт</title>
+    <title>Новости - Охотников Святослав</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 
@@ -21,6 +21,7 @@
             <li><a href="../index.html">Главная</a></li>
             <li><a href="news.html">Новости</a></li>
             <li><a href="goods.html">Товары</a></li>
+            <li><a href="practices.html">Практики</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
     </nav>
