--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты - Охотников Святослав</title>
-    <link rel="stylesheet" href="../style/style.css">   
+    <link rel="icon" href="../images/hacker.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
     <!-- Хэдер -->
     <header>
@@ -29,26 +32,32 @@
         <div class="contact-info">
             <div class="contact-item">
                 <h3>Электронная почта</h3>
-                <p>info@example.com</p>
+                <p>sv.slava.okotnikov@gmail.com</p>
             </div>
 
             <div class="contact-item">
                 <h3>Адрес</h3>
-                <p>г. Москва, ул. Примерная, д. 123, офис 456</p>
+                <p>Секрет нах</p>
             </div>
 
             <div class="contact-item">
                 <h3>Телефон</h3>
-                <p>+7 (123) 456-78-90</p>
-                <a href="tel:+71234567890" class="call-button">Позвоните мне</a>
+                <p>+7 (901) 589-79-83</p>
+                <a href="tel:+71234567890" class="call-button">Позвоните мне(не надо)</a>
             </div>
         </div>
     </main>
 
     <!-- Футер -->
     <footer>
-        <p>&copy; 2023 Наш сайт. Все права защищены.</p>
-        <p>Контакты: info@example.com | +7 (123) 456-78-90</p>
+        <p>© 2023 Охотников Святослав. Все права защищены.</p>
+        <img src="/images/моя печать.png" width="200" />
+
+        <p>Контакты: sv.slava.okotnikov@gmail.com | +7 (901) 589-79-83</p>
+        <p>Запрещённый в России месенджер:</p>
+        <a href="https://t.me/swyatoshaa" class="tg-link cta-button" target="_blank">
+            <i class="fab fa-telegram"></i> Запрещённый в России месенджер
     </footer>
 </body>
+
 </html>
