--- a/pages/news.html
+++ b/pages/news.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Новости - Охотников Святослав</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" href="../images/hacker.png" type="image/x-icon">
 </head>
 
 <body>
@@ -67,8 +68,7 @@
 
     <!-- Футер -->
     <footer>
-        <p>&copy; 2023 Наш сайт. Все права защищены.</p>
-        <p>Контакты: info@example.com | +7 (123) 456-78-90</p>
+        <p1>Хороших новостей нету</p1>
     </footer>
 </body>
 
