--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Охотников Святослав</title>
+    <link rel="icon" href="../images/hacker.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style/index_style.css">
 </head>
@@ -28,8 +29,8 @@
         <!-- Основной контент -->
         <div id="content">
             <div class="profile-header">
-                <img src="../images/photo.png" alt="Фото автора" class="profile-img">
-                
+                " <img src="../images/photo.png" alt="Фото автора" class="profile-img">"
+
                 <h1 class="profile-name">Охотников Святослав Алексеевич</h1>
                 <p class="profile-group">ЭФБО-18-24</p>
                 <p>Начинающий fullstack-разработчик с фокусом на backend-разработку на C# и опыт работы с PostgreSQL</p>
@@ -103,7 +104,7 @@
                 <p>Я открыт для предложений о работе и готов внести вклад в интересные проекты</p>
                 <button class="cta-button">Связаться со мной</button>
                 <p>© 2023 Охотников Святослав. Все права защищены.</p>
-                <img src="/images/моя печать.png" width = "200"/>
+                <img src="/images/моя печать.png" width="200" />
             </div>
         </div>
     </div>
