--- a/pages/goods.html
+++ b/pages/goods.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Товары - Охотников Святослав</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" href="../images/hacker.png" type="image/x-icon">
 </head>
 <body>
     <!-- Хэдер -->
